--- a/scripts.html
+++ b/scripts.html
@@ -307,7 +307,7 @@ Mineração real de BTC com GPUs não é eficiente em comparação com ASICs ded
             <h1>___________________________________________________________________</h1>
 
        <br>
-        <p>// Este script em Python utiliza a biblioteca PyOpenCL para minerar Bitcoin (BTC) usando a GPU. Ele configura a conexão com uma pool de mineração 🎛️ e calcula hashes de dados aleatórios 📊, aproveitando o poder de processamento da GPU 🎮. Embora seja uma simulação simplificada, é ideal para fins educativos sobre mineração de criptomoedas 💻. //
+        <p>// Este script em Python captura a tela, extrai dados de preços de um gráfico e os analisa usando médias móveis. Ele fornece uma recomendação de compra ou venda com base na análise dos preços. Ideal para automação da análise de gráficos de preços em tempo real. 📈🖥️ //
 </p>
             <div class="script-content">
                 <textarea readonly id="script2">import hashlib
@@ -400,8 +400,7 @@ if __name__ == "__main__":
 
 </textarea>
 <center><button class="copy-button" onclick="copyScript('script2')">📋 Copiar Script</button></center>
-<br>
-  <center><h3> Este script em Python captura a tela, extrai dados de preços de um gráfico e os analisa usando médias móveis. Ele fornece uma recomendação de compra ou venda com base na análise dos preços. Ideal para automação da análise de gráficos de preços em tempo real. 📈🖥️</h3></center>
+  
   <p><center>
    
 <h3>🛠️ Recursos:</h3>
